--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,9 +1,16 @@
 @import "variables";
 
 body {
-  background-color: $background-color1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  background-color: $background-color1;
 }
 
 .wrapper {
